name:                gdelt
version:             0.1.0.0
synopsis:            GDELT V2 (Global Database of Events, Language, and Tone)
description:         Parsers for GDELT (Global Database of Events, Language, and Tone) V2. GDELT is an initiative to construct a catalog of human societal-scale behavior and beliefs across all countries of the world, connecting every person, organization, location, count, theme, news source, and event across the planet into a single massive network that captures what's happening around the world, what its context is and who's involved, and how the world is feeling about it, every single day.
homepage:            https://github.com/ocramz/gdelt-hs
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          ocramz
copyright:           (c) Marco Zocca 2020
category:            NLP, Data Mining
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.6.5

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     GDELT.Download
                       GDELT.V2
                       GDELT.V2.Parsec.Common
                       GDELT.V2.GKG
                       GDELT.V2.GKG.Themes
  build-depends:       base >= 4.7 && < 5
                     , algebraic-graphs
                     , binary
                     , bytestring
                     , conduit
                     , conduit-extra
                     , containers
                     , csv-conduit
                     , exceptions
                     , hashable
                     , megaparsec
                     , microlens
                     , req
                     , req-conduit
                     , resourcet
                     , text
                     , time
                     , unordered-containers 
                     -- , zip -- https://github.com/mrkkrp/zip/issues/67

-- executable gdelt
--   default-language:    Haskell2010
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   build-depends:       base
--                      , gdelt

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , gdelt
                     , hspec
                     , QuickCheck

source-repository head
  type:     git
  location: https://github.com/ocramz/gdelt
